Added logo images in auto-play carousel
Created the sample logos and added them to the auto-play carousel for the satisfied clients part.  The max-width is also changed and increased.

--- a/css/index.css
+++ b/css/index.css
@@ -205,15 +205,21 @@ html, body
     animation: fade-up 0.5s ease;
 }
 
+/* Logo Carousel */
 .logo-container
 {
-    max-width: 1040px;
+    max-width: 1400px;
     margin: 0 auto;
+    width: 100%;
 }
 
 .logo-slider
 {
     height: 300px;
-    background-color: white;
-    margin-top: 100px;
+    margin-top: -30px;
+}
+
+.item img
+{
+    width: 300px;
 }
