--- a/css/main.css
+++ b/css/main.css
@@ -76,8 +76,8 @@ html, body
     color: #1B4F72;
 }
 
-/* Home */
-.container1
+/* Home Page*/
+.hero-section
 {
     height: 100%;
     width: 100%;
@@ -90,7 +90,6 @@ html, body
 {
     display: flex;
     align-items: center;
-    animation: fade-up 1s ease;
     padding-top: 80px;
 }
 
@@ -103,33 +102,12 @@ html, body
     text-shadow: 2px 4px 3px rgba(0,0,0,0.1);
 }
 
-/* Animation for the 1st Homepage section */
-@keyframes fade-up
-{
-    0% {
-        display: none;
-        opacity: 0;
-        transform: translateY(0);
-    }
-
-    1% {
-        display: block;
-        opacity: 0;
-        transform: translateY(20px);
-    }
-
-    100% {
-        display: block;
-        opacity: 1;
-        transform: translateY(0);
-    } 
-}
-
 .home-container .home-text h1
 {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 50px;
     line-height: 70px;
+    animation: fade-down 1s ease;
 }
 
 .home-container .home-text p
@@ -138,6 +116,15 @@ html, body
     font-size: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
+    animation: fade-left 1s ease;
+}
+
+.home-container .home-img img
+{
+    width: 650px;
+    margin-top: 20px;
+    margin-right: 110px;
+    animation: fade-right 1s ease;
 }
 
 /* Button from vanir6 - Hover Buttons */
@@ -180,20 +167,99 @@ html, body
     opacity: 1;
 } 
 
-
 .hb-fill-right:hover {
     color: white;
     background: #1B4F72;
     transition: color 0.5s ease 0s, background ease 1s;
 }
 
-.home-container .home-img img
+
+/* Animations */
+@keyframes fade-down
 {
-    width: 650px;
-    margin-top: 20px;
-    margin-right: 110px;
+    0% {
+        display: none;
+        opacity: 0;
+        transform: translateY(0);
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+        transform: translateY(0);
+    } 
 }
 
+@keyframes fade-up
+{
+    0% {
+        display: none;
+        opacity: 0;
+        transform: translateY(0);
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+        transform: translateY(0);
+    } 
+}
+
+@keyframes fade-right
+{
+    30% {
+        display: none;
+        opacity: 0;
+        transform: translateX(0);
+    }
+
+    40% {
+        display: block;
+        opacity: 0;
+        transform: translateX(20px);
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+        transform: translateX(0);
+    } 
+}
+
+@keyframes fade-left
+{
+    30% {
+        display: none;
+        opacity: 0;
+        transform: translateX(0);
+    }
+
+    40% {
+        display: block;
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+        transform: translateX(0);
+    } 
+}
+
+/* Satisfied Clients */
 #satisfied-text
 {
     font-family: 'Roboto Condensed', sans-serif;
@@ -205,7 +271,7 @@ html, body
     animation: fade-up 0.5s ease;
 }
 
-/* Logo Carousel */
+/* Autoplay Logo Carousel */
 .logo-container
 {
     max-width: 1400px;
@@ -222,4 +288,25 @@ html, body
 .item img
 {
     width: 300px;
+}
+
+/* About Us Page */
+.about-container
+{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: sticky;
+    top: 0;
+}
+
+.about-img img
+{
+    width: 700px;
+}
+
+.about-text
+{
+    padding: 0 20px 0 20px;
 }
