--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ html, body
 /* Home Page*/
 .hero-section
 {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-image: url("/img/background3.png");
     background-repeat: no-repeat;
@@ -266,7 +266,7 @@ html, body
     font-size: 15px;
     color: #1B4F72;
     margin-left: 100px;
-    margin-top: -30px;
+    margin-top: 10px;
     display: flex;
 }
 
@@ -281,7 +281,7 @@ html, body
 .logo-slider
 {
     height: 300px;
-    margin-top: -30px;
+    margin-top: -10px;
 }
 
 .item img
@@ -295,11 +295,6 @@ html, body
     opacity: 0;
     transform: translateY(20px);
     transition-property: opacity, transform;
-    
-    &.satisfied-text, {
-    opacity: 1;
-    transform: translateY(0);
-    }
 }
 
 [data-aos="fadeRight"]
@@ -307,11 +302,6 @@ html, body
     opacity: 0;
     transform: translateX(20px);
     transition-property: opacity, transform;
-    
-    &.satisfied-text{
-    opacity: 1;
-    transform: translateX(0);
-    }
 }
 
 [data-aos="fadeLeft"]
@@ -319,17 +309,12 @@ html, body
     opacity: 0;
     transform: translateX(-20px);
     transition-property: opacity, transform;
-    
-    &.satisfied-text{
-    opacity: 1;
-    transform: translateX(0);
-    }
 }
 
 /* About Us Section */
 .about-container
 {
-    height: 100%;
+    height: 75%;
     width: 100%;
     display: flex;
     align-items: center;
@@ -341,13 +326,11 @@ html, body
 {
     width: 720px;
     margin-left: 45px;
-    margin-top: -150px;
 }
 
 .about-text
 {
     padding: 0 20px 0 20px;
-    margin-top: -200px;
     margin-right: 93px;
     margin-left: -50px;
 }
